# Merlin-Prolift-430R

./: .gitignore  README.md
Firmware/: prolift-430.yaml  pyproject.toml
Movement Sensor/: README.md
Movement Sensor/3D Models/: README.md  backing-plate.stl  components.scad  counter-cog.scad  counter-cog.stl  encoder-mount-back.stl  encoder-mount.stl
Movement Sensor/3D Models/lib/: gears.scad
Wired Remote/: Merlin-Remote.kicad_sch  README.md  ~Merlin-Remote.kicad_sch.lck
