[project]
name = "firmware"
version = "0.1.0"
description = ""
authors = [
    {name = "Tim Savage",email = "tim@savage.company"}
]
readme = "README.md"
requires-python = "~=3.12"
dependencies = [
    "esphome (>=2025.4.2,<2026.0.0)"
]

[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
